--- a/faq.html
+++ b/faq.html
@@ -348,7 +348,7 @@ position: relative;
 <br><br><br>
 
 <a href="#tumblr"><font color="#d8b6b6">info about my tumblr</font></a><font color="#aa8f8f"> | </font><a href="#rules"><font color="#d8b6b6">chat rules</font></a><font color="#aa8f8f"> | </font><a href="#name"><font color="#d8b6b6">about my name</font></a><font color="#aa8f8f"> | </font><a href="#myself"><font color="#d8b6b6">about myself</font></a><font color="#aa8f8f"> | </font><a href="#dx"><font color="#d8b6b6">about self dx</font></a><font color="#aa8f8f"> | </font><a href="#agere"><font color="#d8b6b6">about agere &
- communities</font></a><font color="#aa8f8f"> | </font><a href="#words"><font color="#d8b6b6">about controversial words</font></a><font color="#aa8f8f"> | </font><a href="#internet"><font color="#d8b6b6">my internet past</font></a><font color="#aa8f8f"> | </font><a href="#pics"><font color="#d8b6b6">about disliking pics</font></a><font color="#aa8f8f"> | </font><a href="#cc"><font color="#d8b6b6">ccs, ids & kins</font></a><font color="#aa8f8f"> | </font><a href="#gxb"><font color="#d8b6b6">about girls x boys</font></a><font color="#aa8f8f"> | </font><a href="#ywot"><font color="#d8b6b6">ywot advice</font></a><font color="#aa8f8f"> | </font><a href="#astro"><font color="#d8b6b6">about astrology & similar</font></a><font color="#aa8f8f"> | </font><a href="#beauty"><font color="#d8b6b6">some beauty talk</font></a><font color="#aa8f8f"> | </font><a href="#fashion"><font color="#d8b6b6">some fashion talk</font></a><font color="#aa8f8f"> | </font><a href="#sexuality"><font color="#d8b6b6">about sexuality</font></a><font color="#aa8f8f"> | </font><a href="#purity"><font color="#d8b6b6">purity & innocence</font></a><font color="#aa8f8f"> | </font><a href="#media"><font color="#d8b6b6">social media issues general</font></a><font color="#aa8f8f"> | </font><a href="#live"><font color="#d8b6b6">about disliking lives</font></a><font color="#aa8f8f"> | </font><a href="#honest"><font color="#d8b6b6">honest opinion</font></a><font color="#aa8f8f"> | </font><a href="#cruelty-free"><font color="#d8b6b6">cruelty-free lifestyle</font></a>
+ communities</font></a><font color="#aa8f8f"> | </font><a href="#words"><font color="#d8b6b6">about controversial words</font></a><font color="#aa8f8f"> | </font><a href="#internet"><font color="#d8b6b6">my internet past</font></a><font color="#aa8f8f"> | </font><a href="#pics"><font color="#d8b6b6">about disliking pics</font></a><font color="#aa8f8f"> | </font><a href="#cc"><font color="#d8b6b6">ccs, ids & kins</font></a><font color="#aa8f8f"> | </font><a href="#gxb"><font color="#d8b6b6">about girls x boys</font></a><font color="#aa8f8f"> | </font><a href="#ywot"><font color="#d8b6b6">ywot advice</font></a><font color="#aa8f8f"> | </font><a href="#astro"><font color="#d8b6b6">about astrology & similar</font></a><font color="#aa8f8f"> | </font><a href="#beauty"><font color="#d8b6b6">some beauty talk</font></a><font color="#aa8f8f"> | </font><a href="#fashion"><font color="#d8b6b6">some fashion talk</font></a><font color="#aa8f8f"> | </font><a href="#sexuality"><font color="#d8b6b6">about sexuality</font></a><font color="#aa8f8f"> | </font><a href="#purity"><font color="#d8b6b6">purity & innocence</font></a><font color="#aa8f8f"> | </font><a href="#media"><font color="#d8b6b6">social media issues general</font></a><font color="#aa8f8f"> | </font><a href="#live"><font color="#d8b6b6">about disliking lives</font></a><font color="#aa8f8f"> | </font><a href="#honest"><font color="#d8b6b6">honest opinion</font></a><font color="#aa8f8f"> | </font><a href="#cruelty-free"><font color="#d8b6b6">cruelty-free lifestyle</font></a><font color="#aa8f8f"> | </font><a href="#money"><font color="#d8b6b6">about money</font></a>
 <br>
 <br><br>
 <font color="#d1b9b1"><font size="2">※</font> there will be updates and new topics from time to time</font>
@@ -684,7 +684,7 @@ i hope you understand !!
 
 <a name="cc" id="cc"></a>
 <sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　do i have ids ?</font><br><br><br>
-<font color="#d8b9af">　( november . 23 . 2017 + february . 15 . 2018 )</font>
+<font color="#d8b9af">　( november . 23 . 2017 + february . 15 . 2018 + july . 27 . 2018 )</font>
 <br><br>
 <font color="#B1A69E">
 although i quite like kins and ids, i am sincerely afraid to get involved in dramas since the community is often toxic, so i don't usually expose this kind of thing. but since you were interested to know, i'll show you some of my lovely comfort characters !<br>
@@ -1079,6 +1079,50 @@ p { margin: 0; }
 }());
 </script>
 
+　　　　　　　　♡ <a id="linkbjinho" data-target="spoiler4id" class="btn-spoiler4id">kokona</a><br>
+
+<div id="spoiler4id" class="spoiler-area4id is-closed4id">
+<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<br>
+<center><img width="250" height="auto" src="https://i.imgur.com/ZFKJch8.png"/></center><br><br>
+<center><img width="250" height="auto" src="https://i.imgur.com/Ft6fDXx.jpg"/></center><br><br>
+<center><img width="250" height="auto" src="https://i.imgur.com/nURFajC.png"/></center>
+<br><br>
+</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<style>
+p { margin: 0; }
+.spoiler-area4id {
+
+}
+.spoiler-area4id.is-closed4id { height: 0; overflow: hidden; padding: 10px 0 0; }
+</style>
+<script>
+(function(){
+    "use strict";
+    var $btns = document.querySelectorAll('.btn-spoiler4id');
+    function loop($els, cb) {
+        var i = $els.length;
+        while(i--) {
+            cb($els[i]);
+        }
+    }
+    loop($btns, function($btn){
+        $btn.addEventListener("click", function(){
+            var $spoiler = document.getElementById(this.getAttribute("data-target"));
+            if( this.innerHTML === "kokona" ){
+                this.innerHTML = "kokona ˣ";
+                $spoiler.classList.remove("is-closed4id");
+            } else {
+                this.innerHTML = "kokona";
+                $spoiler.classList.add("is-closed4id");
+            }
+        });
+
+    });
+
+}());
+</script>
+
 　　　　　　　　♡ <a id="linkbjinho" data-target="spoiler2id" class="btn-spoiler2id">kagome</a><br>
 
 <div id="spoiler2id" class="spoiler-area2id is-closed2id">
@@ -1401,6 +1445,28 @@ now, about milk and milk products in general, there is a big controversy about w
 about eggs, it's a very important part of the human diet since ever, but of course, it can be replaced. however i have no problems with eggs, just with the treatment of animals, just like the above cases, i look for good sources.<br>
 commenting briefly, wearing fur and animal hide is horrible when they kill animals only for the luxury of vain humans. the skin and leather removed from animals that were killed for food is not something i see problem ( although i have problem with rearing animals in most cases, as i said earlier ). the skin of animals that died in natural ways is something i have nothing against !<br>
 finally, i want to comment on honey, which is somewhat controversial among people who adhere to veganism. i am not against honey or beekeeping, bees do not suffer in the process, it's quite the contrary, they live much better by having humans protecting them. they produce much more honey than they need, and using this extra honey is not wrong. the problem with beekeeping is that it should not be done all over the world, and it is. honeybees should not be living all over the world, but humans carried them everywhere, just for convenience. typical ignorant selfishness. the problem still is not for the bees but for other animals, other pollinators are extremely harmed by having their habitat invaded by bees that should not be there. different types of bees are natural from specific places. i support the breeding of bees in their proper habitats ( in reasonable quantities, obviously, the overpopulation of bees is not good anywhere ). this is not so difficult to find, since you can know the source of the honey you buy. depending on where you live, if it's one of the appropriate places, there may be local creators you can support ! research is the key for a good lifestyle.<br>
+<br><br><br><br><br><br>
+</font>
+
+<a name="money" id="money"></a>
+<sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　how important is money ?</font><br><br><br>
+<font color="#d8b9af">　( july . 27 . 2018 )</font>
+<br><br>
+<font color="#B1A69E">
+i think it's really important to write about it because it's something that has disturbed me all my life and i've always kept quiet about it because no one would take it seriously anyway.<br>
+people live by money, they act as if money is everything in life. even if they pretend they don't, they always think of money in the first place ( of course, until they have real problems in their lives and money doesn't help ).<br>
+ever since i was little i have always been bothered by the importance that all adults gives to money, but they have always told me " you will understand when you grow up ". well, i grew up, and reflecting a lot on what i want to do with my life, i definitely know that i do not want to live looking for money until my death.<br>
+how important is money to our lives ? to begin with, we are living beings, so we must survive in the first place. to survive, we need food, water, shelter, medicine, cleaning products, clothes... nowadays it is also quite necessary to have electricity.<br>
+secondly, we need to be happy, of course, because we have feelings and we think a lot about things, so we need to feel satisfied ! i believe that to be happy is a very personal thing, but in general we need to have peace in our hearts. this is not bought for money, of course. we need to feel comfortable and complete, the pursuit of this is different for each person. in general, we want the presence of people we love in our lives, and this may need money, but not so much, usually the longing is caused more by the lack of time or health of people. some people seek happiness through material goods, which may indeed be quite amusing, but should never be treated as essential because it is not. never. it's the silly, futile thing to expect to be happy, to be sad for the lack of material goods is totally meaningless if you think about it.<br>
+sure, then to be happy it's not necessary to have much money but rather own knowledge and inner peace ; but we need money to survive. of course you can't just run away from money if you were born into society. if you live in a big city, you need to pay bills to have water, shelter and electricity, you need to go to the market to buy food and cleaning products, you have to spend money on medicines and hospitals, you have to buy clothes ! well, it is possible to avoid much of this if you live in the countryside and can have water and food and even produce electricity, because we are intelligent human beings and we have nature in our favor, with effort we can enjoy it a lot. but you will still need money for other things.<br>
+i know what i'm writing are obvious things, but people don't usually think about them, which makes them very confused about life and how money should be used and what it really is for. it exists to be exchanged for important things that we can not produce alone, that we need the help of other people. we can't do everything on our own, and so humans live collectively, to help each other and to fulfill our needs, so we can survive much longer and have time to be happy. or so it should be, of course. things go wrong when people forget what is important to them and what they want and like to do. people can not be happy because they think only of money and what they have been taught to do.<br>
+to make money we need to help other people by doing something they want to pay for. there are many options for this, some are more stable and some less stable. there are many reasons for this, i do not know much about economics, politics or anything like that, but in my view one of the reasons is because some forms of work are extremely indirect, you are not helping anyone really, maybe even being a nuisance. this makes your job a bit pointless, so it's easily disposable and replaceable. people think of this part ( the job ) as super important to their lives and ironically treat it in the worst possible way : they think about what can make more money, neither what makes them happy nor other people happy. money should never be the focus of your life, since this job will be something that will occupy a good part of your life and should be something that helps other people, it should be something pleasurable, rewarding. you can choose from endless options of jobs, why choose to be a slave to money or have a purposeless and unstable work ? i just can't understand.<br>
+obviously many things that we enjoy so so so much are things that are not so useful to others and do not give much money, so we call them hobbies. i would not recommend trying to make a hobbie-type your source of money to survive, as that would give you extreme instability in life and make you very frustrated not to have the work valued. some people can actually make it work, but to have the time and dedication to make it happen it is necessary to survive in that period. if you are supported by someone, you can do this, but it is indeed complicated. BUT it doesn't mean that you should stop with your hobbies or treat them as something small in any way, they are still important, just not your main job.<br>
+thinking about all these things made me define what i want to do with my life ( the answer was the simplest, since these are things i always wanted to do, i just needed to figure out if this would work, of course ) : i definitely do not want to be a slave to money, i will never think of money as something to give life and happiness. i just want to do things that i like and i'm proud to do. that doesn't mean it will be easy, i'm going to have a lot of work and i'm going to try hard to make it work, but with a bright smile on my face !<br>
+i want to live a little away from the city, because i want to plant and raise animals. i have several plans on this and i know it's rather complex, but i've been planning a lot for several years, since it's something i've always wanted to do since i was little. i can tell you the details about some things if you want, of course, only practice can teach me what this kind of life can offer me, but it's really what i want. and i never thought it was something that could give me money since i always grew up having my dreams devalued and being encouraged to work on boring things to have money. i'm glad i never took it seriously and i always followed my heart.<br>
+i already told you that i want to have a cafe, right ? so, this is part of the whole thing, since it also involves food. i believe that selling food in general is quite stable and will be extremely enjoyable to me. the part where the cafe is also a store, is the part where my hobbies are included, since i do not want to abandon them !<br>
+money, being something quite vague and used only to buy important things that help us survive and possibly have extra entertainment, is something that at the moment i am exclusively using with the intention of realizing my dreams and having a source of happy income and stability. in the future, i know that i will have money to also buy beautiful things and travel, but that will only be because i worked hard and made the right choices : i chose to follow my heart, to help people and to be happy.<br>
+do not choose to live for the money, do not be sad because of money, never !!!<br>
 <br><br><br><br>
 </font>
 
