--- a/archive.html
+++ b/archive.html
@@ -351,6 +351,147 @@ overflow-x:hidden;
 font-family: Verdana;">
 
 <br>
+<center><img src="https://i.imgur.com/P2CtFZy.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>june . 15 . 2018</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiiii fluffies <img src="https://i.imgur.com/4mJZ0fF.gif"/><br>
+have you noticed, over there ? that's right, ssl !!<br>
+i know this is kinda silly, but i was actually thinking about getting "https" on my website for a while.<br>
+i'm quite proud, do you remember about the post where i said "i probably will not be able to make all the necessary adaptations or change all links everywhere" ?<br>
+it took some time, but i did it ♡ !!!<br>
+( and also with all the other domains with my html stuff )<br>
+<br>
+i'd like to talk a little bit about my projects that are a little stuck,,<br>
+at the moment i'm working hard on a game with bubu !<br>
+he got the main idea, i created the characters and i'm now writing the whole script ( which takes a while ) <img src="https://i.imgur.com/gVFT5Yh.gif"/><br>
+he will deal with the programming, i don't think i will draw the concepts, but we are still planning this part.<br>
+we've had lots of ideas for games together and we've finally gotten started with one of them, i'm super excited !!!!!<br>
+i will not tell you about what it is yet, but you will know soon !<br>
+oh, and i didn't forget the shy bunny store, of course. i just had financial problems these times ; ;<br>
+things are normalizing and i'm saving money again to start the shop and for all my future plans. i'm working hard the best i can !<br>
+my dream is to have a ( physical ) stationery store, that also sells crafts, accessories, clothes, plushies and all things cute,,, that is also a cafe ♡ !! ( of course things will be separate but the thing is that it's the same establishment )<br>
+i have been practicing a lot of cooking and baking lately <img src="https://i.imgur.com/AsZa0Mn.gif"/><br>
+it will be super comfy and cute, i have so many ideas for decoration and everything. i know that i will be able to realize this dream, even if it takes time, i will do my best for the future !! i always feel so happy to work with things that are beautiful and make people feel happy, it's literally the best thing in the world for me.<br>
+life is a surprise pot and we should never stop dreaming about what will come out of it <img src="https://i.imgur.com/xl53EkP.gif"/><br>
+<br>
+recently i've gone back to drawing some little things in ms paint and i did some cute things that i liked a lot !<br>
+here i am going to show you a drawing of myself that just happened :<br>
+<br><br>
+
+<center><img src="https://i.imgur.com/vbFyl4a.png"/></center>
+
+<br>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/kfD2kLD.gif"/>&nbsp;&nbsp; { &nbsp;1395&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/ft0nNbC.gif"/>&nbsp;&nbsp; { &nbsp;1&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+it was hard to choose the color for my hair, as always, but i liked it ////<br>
++ the little outfit was inspired by a real one that i really like<br>
+<br>
+here also is a little music box that i hope will warm your heart :<br>
+<br><br>
+
+<center><a href="https://files.catbox.moe/f7m6p1.mp3" id="linkbjinho" target="_blank">old stuffie .mp3</a></center>
+</font></font></font>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/7zvWsMq.gif"/>&nbsp;&nbsp; { &nbsp;1427&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/5w5TqhO.gif"/>&nbsp;&nbsp; { &nbsp;0&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+yes this post is going to be a bit long, but today the q&a will be double..<br>
+i want to stop writing many personal topics in a row so i'll just answer both already ; ;<br>
+the first one is a curiosity about my name, the second one is something important. both will be in the faq !<br>
+<br><br>
+<center><img src="https://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="https://i.imgur.com/gCof63R.gif"/></center>
+<br><br>
+　｡ ･ * . ♡ 𝑚𝑒𝑙𝑖𝑠𝑠𝑎
+<br>
+melissa is my name. i really like my name, but i don't use it on the internet because it would be difficult to find me, you know. melissa is the name of a plant, the lemon balm. it is common for people to use this plant to make tea and for medicinal purposes. it has very small, white and delicate flowers. the meaning of this name is literally "honeybee", which makes people give some interesting interpretations to it. some people gave me the nickname "mel" ( which means literally honey ), but they usually call me melissa.
+<br>
+<br>
+　｡ ･ * . ♡ 𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡
+<br>
+this is actually more a surname than a name, but i use it as a nickname on the internet, as well as some variations of it ( mimi, midpot, mimipot ). it's not a real surname, i discovered it in a dream. at the time i was thinking of a nickname to use on the internet and i had just created the "crwel friends" project, so i was thinking about many things and characters, especially potatoes. i used the nickname "poteto" from time to time, because of that. one day i dreamed about potatoes and many other confusing things, including a very fat and giant cat that called me "melissa middlepot". he told me "you're bigger than your potato friends, but there are still bigger potatoes, believe me", even though i was not really a potato. i know it's weird, but the dream was in portuguese, except for the surname "middlepot", so it's a bit hard to explain LOL. well, i woke up really thinking that middlepot was good, it sounds like some english surnames. so, yes, i believe that "pot" is from "potato". be honest, "middlepot" is pretty cute, isn't it ?
+<br>
+<br>
+<br>
+i have been asked a few times to make lives here on the internet, but it's not so often, the most common is that people ask me to do things personally, publicly.<br>
+for example, i studied cello for a few years in a music conservatory. i had no problems playing cello for one person, but i was always invited to try to participate in concerts. i never wanted this, but i felt bad because it was something that everyone expected of me, "for my evolution". why couldn't i evolve without hundreds of people staring at me ?<br>
+when i was a child i was always asked if i would like to be a model, but i always denied it because i didn't like the idea, i was never the kind of person who liked to receive attention from many people. i always felt suffocated and uncomfortable in being in the presence of many people, especially when they were all looking at me.. very horrible for me, really.<br>
+i even denied taking ballet classes as a child because i was afraid to participate in live performances. i knew i would be obligated, i didn't want that. however, i wanted to dance, so i ended up training alone at home and ended up enjuring my foot because of excessive exertion on the fingers. maybe i can never dance ballet because of it. i could have taken classes right, but they didn't give me the opportunity. they only talked about "when i would dance on a stage". i know no one wanted my bad, but it still hurts.<br>
+at school and college i was forced to present projects in front of the whole class, it is common to do this at school. this has always been very traumatic for me, although i always strive to be all right. i went through bad times with these uncomfortable situations, i tried to force myself to change and feel confident, but that was not really the problem. even when i did everything perfectly right, i was not nervous, i didn't say anything wrong... i never felt victorious. it has never been pleasant to "overcome" this, because i have never overcomed, my personality is not something overcomable. even when they applauded me and said that i did very well, i always felt that it was not right and that i was forcing myself being something that i was not.<br>
+i don't want to have to pretend and force myself to do things that don't give me pleasure because people think it's important and that "i'm going to get over it". i don't like doing anything with several people staring at me. i don't like being in the presence of many people and i don't like receiving attention from many people at the same time. is suffocating. i'm not insecure about what i do, i'm not afraid of failure, i'm not afraid of criticism, it's just uncomfortable.<br>
+i always like to record and post things that i do to receive constructive opinions and criticisms for my improvement. i like people to see my things. i just do not want to be something that i'm not, please.<br>
+i admire the work of people who perform live performances and concerts with skill and confidence, but i'm not a weak person or inferior to them for not liking doing these things. i was born that way and it's not something i want to change, at all. it never got in the way of developing what i wanted to do.<br>
+i hope you understand this, i really wish i could continue to share content with you without feeling the pressure of living bad experiences. i made mistakes that i regret a lot, trying to change who i am, this is impure.<br>
+<br>
+<br>
+; ; i'm sorry for writing so much, i hope this hasn't been dull to read <img src="https://i.imgur.com/9dsQ6JM.gif"/><br>
+<br>
+<br>
+xoxo <img src="https://i.imgur.com/9Wy2D9L.gif"/><br>
+<br><br>
+</font></font></font>
+<br>
+
+<body>
+<div style="float: right;">
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/lMakBs6.gif"/>&nbsp;&nbsp; { &nbsp;1443&nbsp; } &nbsp;
+</div>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/Ky2Z5py.gif"/>&nbsp;&nbsp;{ &nbsp;1&nbsp; } &nbsp;
+</div>
+</font></font>
+</div>
+</body>
+<br><br><br><br><br><br><br>
+
+<center><img src="https://i.imgur.com/P2CtFZy.gif"/></center>
+
+<br><br><br>
+
 <center><img src="https://i.imgur.com/uMLLLui.gif"/><img src="https://i.imgur.com/eT7VFAV.gif"/><img src="https://i.imgur.com/1yUhsrQ.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
