--- a/help.html
+++ b/help.html
@@ -866,6 +866,7 @@ function getPosition(el) {
 ・ take a soothing tea such as lemon balm or valerian about 30 minutes before going to bed<br>
 ・ i don't recommend listening to music while sleeping, unless it is a very soft music and with low volume. listen to loud music all night can do harm to your ears, and give a headache !<br>
 ・ i highly recommend ASMR videos ( if you don't know what that means, see <a href="https://en.wikipedia.org/wiki/Autonomous_sensory_meridian_response" target="_blank" id="linklinklink">here</a> ) ! i have an asmr playlist you can check <a href="https://www.youtube.com/playlist?list=PLsBmCEP2InOp69wlTeQKg7GnB2EG5apxD" target="_blank" id="linklinklink">here</a><br>
+・ if you go to watch videos before bed just watch those that will relax you and make you sleepy. please be sure to use a blue light filter to do no harm to your eyesight, and i recommend just listening to the audio at minimum volume for faster sleep. ( don't forget to take off your earphones before falling asleep )<br>
 ・ make a diary of your sleep ! write down the time you woke up, the number of hours slept and the quality of your sleep. this will help you improve<br>
 ・ if you are sleeping properly, will have no trouble getting up early. if still, try to deal quickly with something to wake up on time: get out of the bed quickly and prepare some coffee, take your phone, play some games or see your social networks, detach from your bed, the day started !<br>
 <br>
@@ -1363,6 +1364,7 @@ p { margin: 0; }
 ・ tome um chá calmante como o de erva-cidreira ou valeriana cerca de 30 minutos antes de ir para cama<br>
 ・ eu não recomendo ouvir música enquanto dorme, a não ser que seja uma música muito calma e em volume baixo. escutar música em volume alto a noite toda pode fazer mal aos seus ouvidos, além de dar dor de cabeça !<br>
 ・ eu recomendo altamente vídeos de ASMR ( se você não sabe o que isso significa, veja <a href="https://en.wikipedia.org/wiki/Autonomous_sensory_meridian_response" target="_blank" id="linklinklink">aqui</a> ) ! eu tenho uma playlist de asmr que você pode conferir <a href="https://www.youtube.com/playlist?list=PLsBmCEP2InOp69wlTeQKg7GnB2EG5apxD" target="_blank" id="linklinklink">aqui</a><br>
+・ se você for assistir vídeos antes de dormir apenas assista aqueles que irão te relaxar e te deixar sonolento. por favor não se esqueça de usar um filtro de luz azul para não fazer mal pra sua vista, e eu recomendo apenas ouvir o áudio em volume mínimo para um sono mais rápido ( não se esqueça de tirar os fones antes de cair no sono )<br>
 ・ faça um diário do seu sono ! anote a hora que acordou, a quantidade de horas que dormiu e a qualidade do seu sono. isso vai te ajudar a melhorar<br>
 ・ se estiver dormindo adequadamente, não vai ter dificuldades para acordar cedo. se ainda tiver, tente se ocupar rápido com algo no horário de acordar : levante rapidamente da cama e prepare um pouco de café, pegue o celular, jogue um pouco ou veja suas redes sociais, desapegue da cama, o dia começou !<br>
 <br>
